--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/premium-vector/shiba-inu-dog-mascot-character-smiling-dog-cartoon-logo-template_7450-496.jpg?w=2000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Camp</title>
   </head>
